--- a/Views/admin/rules/Rules.cshtml
+++ b/Views/admin/rules/Rules.cshtml
@@ -103,7 +103,7 @@
                                             <option value="">Select an admin...</option>
                                             @foreach (var admin in ViewBag.Admins as List<GoEASy.Models.Admin>)
                                             {
-                                                <option value="@admin.AdminId">@admin.FullName - @admin.Role</option>
+                                                <option value="@admin.AdminID">@admin.FullName - @admin.Role</option>
                                             }
                                         </select>
 
