--- a/Views/client/favorite/favorite.cshtml
+++ b/Views/client/favorite/favorite.cshtml
@@ -183,7 +183,7 @@
                                     data-aos-duration="1500" data-aos-offset="50">
                                     <div class="image">
                                         <span class="badge bgc-pink">Featured</span>
-                                        <a href="#" class="heart remove-favorite" data-tour-id="@fav.TourId"><i class="fas fa-heart"></i></a>
+                                        <a href="#" class="heart remove-favorite" data-tour-id="@fav.TourID"><i class="fas fa-heart"></i></a>
                                         <img src="assets/images/destinations/tour-list1.jpg" alt="Tour List">
                                     </div>
                                     <div class="content">
