--- a/Views/admin/destination_admin/DestinationAdmin.cshtml
+++ b/Views/admin/destination_admin/DestinationAdmin.cshtml
@@ -102,7 +102,7 @@
                                     @if (images != null && images.Any())
                                     {
                                         var coverImage = images.FirstOrDefault(img => img.IsCover == true) ?? images.FirstOrDefault();
-                                        <img src="@coverImage.ImageUrl" alt="@destination.DestinationName" style="width: 50px; height: 50px; object-fit: cover; border-radius: 4px;" />
+                                        <img src="@coverImage.ImageURL" alt="@destination.DestinationName" style="width: 50px; height: 50px; object-fit: cover; border-radius: 4px;" />
                                     }
                                     else
                                     {
