--- a/Views/admin/tour_admin/TourAdmin.cshtml
+++ b/Views/admin/tour_admin/TourAdmin.cshtml
@@ -106,7 +106,7 @@
                                     @if (images != null && images.Any())
                                     {
                                         var coverImage = images.FirstOrDefault(img => img.IsCover == true) ?? images.FirstOrDefault();
-                                        <img src="@coverImage.ImageUrl" alt="@tour.TourName" style="width: 50px; height: 50px; object-fit: cover; border-radius: 4px;" />
+                                        <img src="@coverImage.ImageURL" alt="@tour.TourName" style="width: 50px; height: 50px; object-fit: cover; border-radius: 4px;" />
                                     }
                                     else
                                     {
